# final-nn

./: README.md  digit-autoencoder.ipynb  dna-classifier.ipynb  pyproject.toml
.github/workflows/: test.yaml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
