[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[project]
name = "Regression"
authors = [{name = "Isaiah Hazelwood", email = "isaiah.hazelwood@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy"
]
requires-python = ">= 3.7"

[project.urls]
Home = "https://github.com/isaiahah/final-nn"
